<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wear2GO</string>

    <string name="arduino_label">Arduino Events</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="reroute">Reroute</string>
    <string name="arrived">Arrived</string>
    <string name="blip">Blip</string>

    <string name="pebble_label">Pebble Events</string>
    <string name="pebble_head">Enter a heading</string>
    <string name="pebble_body">Enter a body</string>
    <string name="send">Send Notification</string>

    <string name="run_tests">Run Simulation From Log</string>
    <string name="test">Start Simulation</string>

    <string name="settings_label">Enable Wear2GO to access notifications in settings</string>
    <string name="settings_btn">Go to settings</string>

    <string name="controllers_label">Enable/Disable Controllers</string>
    <string name="pebble_controller">Enable Pebble Controller</string>
    <string name="arduino_controller">Enable Arduino Controller</string>

    <string name="test_label">Test Platform</string>
    <string name="test_btn">Open test platform</string>


</resources>
