<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/arduino_label"
        android:id="@+id/arduino_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:id="@+id/left_btn"
        android:layout_below="@+id/arduino_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:id="@+id/right_btn"
        android:layout_below="@+id/left_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reroute"
        android:id="@+id/reroute_btn"
        android:layout_below="@+id/right_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrived"
        android:id="@+id/arrived_btn"
        android:layout_below="@+id/reroute_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blip"
        android:id="@+id/blip_btn"
        android:layout_below="@+id/arrived_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pebble_label"
        android:id="@+id/pebble_label"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/blip_btn"
        android:layout_alignParentRight="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pebble_head"
        android:layout_below="@+id/pebble_label"
        android:hint="@string/pebble_head"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pebble_body"
        android:layout_below="@+id/pebble_head"
        android:hint="@string/pebble_body"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/send_btn"
        android:layout_below="@+id/pebble_body"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/run_tests"
        android:id="@+id/test_label"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/send_btn"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:id="@+id/test_btn"
        android:layout_below="@+id/test_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>